# laba_4_2sem

./: .gitmodules  CMakeLists.txt
app_gui/include/: LazySequenceController.hpp  LazySequenceWidget.hpp  MainWindow.hpp  StatisticsController.hpp  StatisticsWidget.hpp  TestingWidget.hpp
app_gui/src/: LazySequenceController.cpp  LazySequenceWidget.cpp  MainWindow.cpp  StatisticsController.cpp  StatisticsWidget.cpp  TestingWidget.cpp  main.cpp
src/: Cardinal.hpp  LazySequence.hpp  LazySequence.tpp  OnlineStatistics.hpp  OnlineStatistics.tpp  Optional.hpp  Optional.tpp  ReadOnlyStream.hpp  ReadOnlyStream.tpp
tests/: CMakeLists.txt  test_lazy_sequence.cpp  test_online_statistics.cpp  test_readonly_stream.cpp
